<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tc-Android</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="delete" tools:ignore="ExtraTranslation">Delete</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="kilometer">Kilometer</string>
    <string name="factory">Factory</string>
    <string name="car_name">Car Name</string>
    <string name="add_car">Add Car</string>
    <string name="update_car">Update Car</string>
    <string name="is_automate">Automate</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="email">Email</string>
    <string name="identification_id">ID</string>
    <string name="have_account">LOG IN TO ACCOUNT</string>
    <string name="signup">Sign Up</string>
    <string name="cost">Cost</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="description">Description</string>
    <string name="title_home">Home</string>
    <string name="title_rent">Rent</string>
    <string name="title_my_cars">Cars</string>
    <string name="home">Home</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_select_image">Select Image</string>
    <string-array name="navigation_drawer_items_array">
        <item>Cars</item>
        <item>Users</item>
    </string-array>
    <string name="cars">Cars</string>
    <string name="string_see_all_cars">See All Cars</string>
    <string name="string_add_new_car">Add A New Car</string>
</resources>
