<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242424"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".view.activities.AddCarAdminActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <EditText
            android:id="@+id/editText_updateCar_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_directions_car_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/car_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat"
            android:enabled="false"/>


        <EditText
            android:id="@+id/editText_updateCar_factory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_build_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/factory"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editText_updateCar_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_perm_contact_calendar_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/year"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editText_updateCar_kilometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_ev_station_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/kilometer"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editText_updateCar_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_color_lens_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/color"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat" />

        <CheckBox
            android:id="@+id/checkbox_updateCar_automate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:buttonTint="@color/white"
            android:drawableStart="@color/white"
            android:drawableLeft="@color/white"
            android:drawablePadding="-15dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/is_automate"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_updateCar_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_login_edittext"
            android:drawableStart="@drawable/ic_attach_money_white_24dp"
            android:drawablePadding="3dp"
            android:fontFamily="@font/font_normal"
            android:hint="@string/price"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlCompat" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" />

        <Button
            android:id="@+id/button_updateCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_login_button"
            android:hint="@string/update_car"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
