<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cart_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cons_lay_user"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_user_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/amazons"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="@id/cons_lay_user" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amazons"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/textview_username"
            app:layout_constraintTop_toBottomOf="@id/textview_username"
            app:layout_constraintLeft_toLeftOf="@id/textview_email"
            />

        <TextView
            android:id="@+id/textview_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintStart_toEndOf="@id/textview_username"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/textview_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amazons"
            android:gravity="center"
            android:text="@string/last_name"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toEndOf="@id/textview_name"
            app:layout_constraintTop_toBottomOf="@+id/textview_email"
            app:layout_constraintStart_toStartOf="@id/textview_email"
            />
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/delete_user"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_delete_forever_white_18dp"
            app:layout_constraintEnd_toEndOf="@id/cons_lay_user"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>