<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    tools:context=".view.activities.LoginActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_edittext"
        android:drawableLeft="@drawable/ic_account_circle_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_account_circle_white_24dp"
        android:fontFamily="@font/font_normal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#D9ffffff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/edittext_signup_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_edittext"
        android:drawableLeft="@drawable/ic_account_circle_white_24dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_account_circle_white_24dp"
        android:fontFamily="@font/font_normal"
        android:hint="@string/username"
        android:textColor="#FFF"
        android:textColorHint="#D9ffffff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/edittext_signup_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_login_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/font_normal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#D9ffffff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/edittext_signup_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edittext_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_login_edittext"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/font_normal"
        android:hint="@string/identification_id"
        android:inputType="number"
        android:textColor="#FFF"
        android:textColorHint="#D9ffffff"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/button_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_login_button"
        android:fontFamily="@font/font_normal"
        android:text="@string/signup"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0.6"
        android:background="@android:color/transparent"
        android:text="@string/have_account"
        android:textColor="#FFF"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="@id/button_signup"
        app:layout_constraintRight_toRightOf="@id/button_signup"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom" />
</android.support.constraint.ConstraintLayout>