<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtCarName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_directions_car_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/car_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFactory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_build_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/factory"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtKilometer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_ev_station_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/kilometer"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_format_color_fill_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/color"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_perm_contact_calendar_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/year"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/isAutomate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:enabled="false"
                android:fontFamily="@font/font_normal"
                android:gravity="center_vertical"
                android:text="@string/is_automate"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_login_button"
                android:fontFamily="@font/font_normal"
                android:text="@string/photos"
                android:textColor="#FFF"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_login_edittext"
                android:drawableLeft="@drawable/ic_attach_money_white_24dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_normal"
                android:text="@string/price"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
